resolve alignment of degree strain

--- a/sass/_six-degrees.scss
+++ b/sass/_six-degrees.scss
@@ -35,4 +35,5 @@
 .degree-option {
 	max-width: 225px;
 	@include border-radius(50%);
+	vertical-align: middle
 }
